--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
         android:ems="10"
         android:gravity="end"
         android:inputType="number"
+        android:maxLength="3"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -120,6 +121,7 @@
         android:ems="10"
         android:gravity="end"
         android:inputType="numberDecimal"
+        android:maxLength="5"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -155,6 +157,7 @@
         android:ems="10"
         android:gravity="end"
         android:inputType="numberDecimal"
+        android:maxLength="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/heText"
